fixed text and images dimensions and added margin and gaps

--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@
 .home {
     display: flex;
     flex-flow: row nowrap;
+    justify-content: space-between;
+    margin: 1em;
 }
 .title {
     display: flex;
@@ -23,13 +25,15 @@
     justify-content: center;
 }
 .images > img {
-    height: 300px;
+    height: 350px;
     width: auto;
 }
 .reviews {
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
+    gap: 1em;
+    margin: 1em;
 }
 .rating > img {
     height: 50px;
@@ -40,8 +44,9 @@
     width: auto;
 }
 .star-rating > img {
-    height: 50px;
+    height: 75px;
     width: auto;
+    margin: 1em;
 }
 .rating {
     flex: 1 1 0;
@@ -52,5 +57,8 @@
 }
 .amazon-link > p {
     font-weight: bolder;
-    font-size: larger;
+    font-size: large;
+}
+.amazon-link {
+    margin: 1em;
 }
